commit 2/1/23 V2 code reduced and remade for light theme. Removed send button.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="cam_strm">Cam Strm</string>
     <string name="hc_05">HC-05</string>
     <string name="connect">Connect</string>
+    <string name="todo">TODO</string>
 </resources>
